# mementovm

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE.md  PRD.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  __init__.py  alembic.ini
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/domain/: __init__.py  program.py
backend/app/integrations/: __init__.py  alibaba_oss.py
backend/app/llm/: __init__.py  model_router.py  qwen_gateway.py
backend/migrations/: env.py
deployment/: ALIBABA_CLOUD_PROOF.md  Caddyfile  TRIAL_CREDITS_RUNBOOK.md  backup.sh  deploy_ecs.sh  install_docker_ecs.sh  reliability_gate.py  restore.sh  smoke.py
docs/architecture/: deployment.mmd  system.mmd
docs/demo/: SCRIPT.md  SHOT_LIST.md  VIDEO.md
docs/evaluation/: REPORT.md
docs/pitch/: Latch-MementoVM-Pitch-Deck.pptx
docs/submission/: DEVPOST_DRAFT.md
evaluation/: __init__.py  runner.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: latch-app.tsx
frontend/lib/: api.ts
simulator/scenarios/: absence_followup.yaml  contract_approval.yaml
tests/: test_alibaba_oss.py  test_api.py  test_evaluation.py  test_reliability_gate.py  test_security.py  test_validator.py
worker/: Dockerfile  run.py
(+15 files in other folders)
