[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mementovm"
version = "1.0.0"
description = "Prospective memory runtime for long-running agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "sqlalchemy>=2.0.41,<3",
  "alembic>=1.16,<2",
  "psycopg[binary]>=3.2.9,<4",
  "pydantic-settings>=2.10,<3",
  "openai>=1.97,<2",
  "jsonschema>=4.25,<5",
  "python-dateutil>=2.9,<3",
  "pyyaml>=6.0,<7",
  "oss2>=2.19,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "evaluation", "worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
